--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,32 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <img src="static/image.png" width="70px" height="70px">
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        {% if user.is_authenticated %}
-        <div class="text-black">Hello, {{ user.username }}!</div>
-        <li class="nav-item">
-          <a class="nav-link" href="/accounts/logout">LogOut</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/new-game">New Game</a>
-          </li>
 
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="/accounts/signup">SignUp</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/accounts/login">LogIn</a>
-          </li>
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(168, 175, 214)">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+      <a class="navbar-brand" href="{% ">MyGameList</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+ <ul class="navbar-nav mr-auto">
+   <li class="nav-item active">
+    <form class="form-inline ml-auto">
 
-          {% endif %}
+      {% if user.is_authenticated %}
+      <div class="text-white">Hello, <strong>{{ user.username }}</strong>!</div>
+      <a href="" class="btn btn-success ml-4">New Page</a>
+      <a href="{% url 'logout' %}" class="btn btn-danger ml-2">Log Out</a>
     
-      </ul>
-    </div>
-  </nav>
+
+      {% else %}
+  
+
+      <a href="{% url 'login' %}" class="btn btn-secondary ml-2">Log In</a>
+      <a href="{% url 'accounts:signup' %}" class="btn btn-primary ml-2">Sign Up</a>
+
+      {% endif %}
+
+    </form>
+     </div>
+ </ul>
+ <form class="form-inline my-2 my-lg-0">
+ </form>
+</div>
+</nav>
