--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-/* .games {
+.games {
 float: left;
   margin-bottom: 100px;
   margin-left: 100px;
@@ -29,7 +29,7 @@ float: left;
 	z-index: 2;
 	box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
 
-} */
+}
 
  p {
   color: black;
@@ -45,4 +45,7 @@ h5 {
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
 
