--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(168, 175, 214)">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-      <a class="navbar-brand" href="{% ">MyGameList</a>
+      <a class="navbar-brand" href="/">MyGameList</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
 </button>
@@ -13,7 +13,7 @@
 
       {% if user.is_authenticated %}
       <div class="text-white">Hello, <strong>{{ user.username }}</strong>!</div>
-      <a href="" class="btn btn-success ml-4">New Game</a>
+      <a href="{% url 'game-create-page' %}" class="btn btn-success ml-4">New Game</a>
       <a href="{% url 'logout' %}" class="btn btn-danger ml-2">Log Out</a>
     
 
