--- a/templates/new_game.html
+++ b/templates/new_game.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block body %}
 
 <div class="row">
         <h3>Submit a game to your list!</h3>
