--- a/templates/one_game.html
+++ b/templates/one_game.html
@@ -8,11 +8,12 @@
         <h1>{{ game.title }}</h1>
 
         <div class="row">
-            <div class="col-xl main-product-img-container">
-                <img class="main-product-img" src="{{ game.image_url }}">
+                <div class="game-images">
+                <img class="game-img" src="{{ game.img }}" height="200px" width="300px">
             </div>
-            <div class="col-xl">
-                <h2>{{ game.price }}</h2>
+            </div>
+
+                <h2>${{ game.price }}</h2>
             </div>
         </div>
     </div>
