--- a/templates/new_game.html
+++ b/templates/new_game.html
@@ -2,6 +2,16 @@
 
 {% block body %}
 
+<style>
+    form {
+        padding-left: 100px;
+    }
+
+    h3 {
+        padding-left: 50px;
+        padding-top: 50px;
+    }
+</style>
 <div class="row">
         <h3>Submit a game to your list!</h3>
         <form method="POST">
